--- a/速递医疗 医生端/StoryBoard/MyPatient.storyboard
+++ b/速递医疗 医生端/StoryBoard/MyPatient.storyboard
@@ -35,7 +35,7 @@
         <!--Mypatient main-->
         <scene sceneID="llA-dP-p9V">
             <objects>
-                <viewController id="It8-BD-Sb6" customClass="Mypatient_main" customModule="速递医疗_医生端" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="It8-BD-Sb6" customClass="Mypatient_main" customModule="DoctorClient" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="dsV-MH-Ubz"/>
                         <viewControllerLayoutGuide type="bottom" id="Ice-qP-exs"/>
@@ -54,7 +54,7 @@
         <!--Mypatient page check-->
         <scene sceneID="1bZ-CY-aRc">
             <objects>
-                <viewController storyboardIdentifier="mypatient_check" id="N36-Kf-7yQ" customClass="Mypatient_page_check" customModule="速递医疗_医生端" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="mypatient_check" id="N36-Kf-7yQ" customClass="Mypatient_page_check" customModule="DoctorClient" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Tac-kn-JK6"/>
                         <viewControllerLayoutGuide type="bottom" id="RfE-P3-AUK"/>
@@ -63,11 +63,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="130" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="s4O-2M-JmZ" customClass="BaseTableView" customModule="速递医疗_医生端" customModuleProvider="target">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="130" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="s4O-2M-JmZ" customClass="BaseTableView" customModule="DoctorClient" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="10" width="375" height="657"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="reuseIdentifier" rowHeight="130" id="49W-X0-drh" customClass="MypatientTableViewCell" customModule="速递医疗_医生端" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="reuseIdentifier" rowHeight="130" id="49W-X0-drh" customClass="MypatientTableViewCell" customModule="DoctorClient" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="1" width="375" height="130"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="49W-X0-drh" id="fBU-e7-Hgw">
@@ -184,7 +184,7 @@
         <!--Mypatient page checked-->
         <scene sceneID="Yqy-5e-872">
             <objects>
-                <viewController storyboardIdentifier="mypatient_checked" id="yt3-Xo-qew" customClass="Mypatient_page_checked" customModule="速递医疗_医生端" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="mypatient_checked" id="yt3-Xo-qew" customClass="Mypatient_page_checked" customModule="DoctorClient" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ztm-fy-1zW"/>
                         <viewControllerLayoutGuide type="bottom" id="GDu-7C-s7r"/>
@@ -193,11 +193,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="130" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="21f-Sy-VrM" customClass="BaseTableView" customModule="速递医疗_医生端" customModuleProvider="target">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="130" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="21f-Sy-VrM" customClass="BaseTableView" customModule="DoctorClient" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="10" width="375" height="657"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="reuseIdentifier" rowHeight="130" id="tqD-Z3-Ate" customClass="MypatientTableViewCell2" customModule="速递医疗_医生端" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="reuseIdentifier" rowHeight="130" id="tqD-Z3-Ate" customClass="MypatientTableViewCell2" customModule="DoctorClient" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="1" width="375" height="130"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tqD-Z3-Ate" id="1SK-ey-ZnB">
@@ -340,7 +340,7 @@
         <!--Mypatient Confirm Order-->
         <scene sceneID="God-HO-sRj">
             <objects>
-                <viewController storyboardIdentifier="ConfirmOrder" id="cRx-HP-Maw" customClass="MypatientConfirmOrder" customModule="速递医疗_医生端" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ConfirmOrder" id="cRx-HP-Maw" customClass="MypatientConfirmOrder" customModule="DoctorClient" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="YWo-y2-N0K"/>
                         <viewControllerLayoutGuide type="bottom" id="Ny5-wE-1SU"/>
@@ -372,7 +372,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wqz-p9-USJ">
-                                        <rect key="frame" x="295" y="20" width="80" height="44"/>
+                                        <rect key="frame" x="295" y="19.5" width="80" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="8Bu-He-2bV"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="IHA-41-tQC"/>
@@ -400,7 +400,7 @@
                                     <constraint firstAttribute="trailing" secondItem="Wqz-p9-USJ" secondAttribute="trailing" id="xLy-Bu-iDg"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="GM9-pH-Svx" customClass="BaseGropTableView" customModule="速递医疗_医生端" customModuleProvider="target">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="GM9-pH-Svx" customClass="BaseGropTableView" customModule="DoctorClient" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
