--- a/速递医疗 医生端/StoryBoard/Login.storyboard
+++ b/速递医疗 医生端/StoryBoard/Login.storyboard
@@ -23,7 +23,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bj_01" translatesAutoresizingMaskIntoConstraints="NO" id="MED-n8-Mi9">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bj01" translatesAutoresizingMaskIntoConstraints="NO" id="MED-n8-Mi9">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="240"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mYg-yR-07e">
@@ -68,7 +68,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                                     </textField>
-                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="icon_label_yh_03" translatesAutoresizingMaskIntoConstraints="NO" id="aBS-vq-ZG5">
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="iconlabelyh03" translatesAutoresizingMaskIntoConstraints="NO" id="aBS-vq-ZG5">
                                         <rect key="frame" x="1" y="34" width="30" height="30"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                     </imageView>
@@ -79,7 +79,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
                                     </textField>
-                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="icon_label_yh" translatesAutoresizingMaskIntoConstraints="NO" id="onn-cJ-cHg">
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="iconlabelyh" translatesAutoresizingMaskIntoConstraints="NO" id="onn-cJ-cHg">
                                         <rect key="frame" x="0.0" y="82" width="30" height="30"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                     </imageView>
@@ -149,7 +149,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bj_01" translatesAutoresizingMaskIntoConstraints="NO" id="cOR-s6-MdT">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bj01" translatesAutoresizingMaskIntoConstraints="NO" id="cOR-s6-MdT">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="240"/>
                                 <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="8" right="8"/>
                             </imageView>
@@ -295,7 +295,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bj_01" translatesAutoresizingMaskIntoConstraints="NO" id="EjF-eI-JUo">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bj01" translatesAutoresizingMaskIntoConstraints="NO" id="EjF-eI-JUo">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="240"/>
                                 <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="8" right="8"/>
                             </imageView>
@@ -421,9 +421,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="bj_01" width="540" height="458"/>
-        <image name="icon_label_yh" width="20" height="20"/>
-        <image name="icon_label_yh_03" width="20" height="20"/>
+        <image name="bj01" width="540" height="458"/>
+        <image name="iconlabelyh" width="20" height="20"/>
+        <image name="iconlabelyh03" width="20" height="20"/>
         <image name="logo" width="74" height="72"/>
     </resources>
 </document>
